@@ -1160,6 +1160,11 @@ public:
       rc = zoo_create(zk, path, "", 0, &ZOO_OPEN_ACL_UNSAFE, 0, 0, 0);
       CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
 
+      rc = zoo_create(zk, "/something2", "", 0,
+                      &ZOO_OPEN_ACL_UNSAFE, 0, 0, 0);
+      CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
+
+
       /* remove all watchers */
       count = 0;
       rc = zoo_wget(zk, path, watcher_rw, NULL, buf, &blen, NULL);
@@ -1210,13 +1215,29 @@ public:
       zk = createClient(&ctx);
 
       /* add a watch, stop the server, and remove it locally */
-      rc = zoo_wget(zk, "/something", watcher_remove_watchers, NULL,
+      void* ctx1=(void*)0x1;
+      void* ctx2=(void*)0x2;
+
+      rc = zoo_wget(zk, "/something", watcher_remove_watchers, ctx1,
                     buf, &blen, NULL);
       CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
-      stopServer();
-      rc = zoo_remove_watches(zk, path, ZWATCHTYPE_DATA,
-                               watcher_rw, ctx1, 1);
+
+      rc = zoo_wget(zk, "/something2", watcher_remove_watchers, ctx2,
+                         buf, &blen, NULL);
       CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
+
+      stopServer();
+      rc = zoo_remove_watchers(zk, "/something", ZWATCHERTYPE_DATA,
+                               watcher_remove_watchers, ctx1, 1);
+      CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
+
+      rc = zoo_remove_watchers(zk, "/something", ZWATCHERTYPE_DATA,
+                                    watcher_remove_watchers, ctx1, 1);
+      CPPUNIT_ASSERT_EQUAL((int)ZNOWATCHER, rc);
+
+      rc = zoo_remove_watchers(zk, "/something2", ZWATCHERTYPE_DATA,
+                                          watcher_remove_watchers, ctx2, 1);
+      CPPUNIT_ASSERT_EQUAL((int)ZOK,rc);
     }
 };
 
