@@ -14,6 +14,9 @@ Backward compatible changes:
   ZOOKEEPER-1887. C implementation of removeWatches (Raul Gutierrez Segales via
   michim)
 
+  ZOOKEEPER-2611: zoo_remove_watchers - can remove the wrong watch
+  (Eyal Leshmem via rgs)
+
 BUGFIXES:
 
   ZOOKEEPER-2062 RemoveWatchesTest takes forever to run (Chris Nauroth via rakeshr)
